# wkp

./: .env.sample  .gitignore  README.md  pyproject.toml
wkp/: __init__.py  cli.py  wiki.py
